SEO improved with full meta setup

--- a/index.html
+++ b/index.html
@@ -2,10 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- ⭐ Favicon (change later to your logo if you want) -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>notenest</title>
+
+    <!-- ⭐ MAIN SEO TITLE -->
+    <title>NoteNest | AKTU Courses Hub, Study Materials & CGPA Calculator</title>
+
+    <!-- ⭐ BASIC SEO -->
+    <meta
+      name="description"
+      content="NoteNest is a full-stack student platform for AKTU courses, study materials, and CGPA calculation. Upload notes, explore resources, and plan academics smarter."
+    />
+    <meta name="author" content="Riddhi Jaiswal" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- ⭐ OPEN GRAPH (LinkedIn / WhatsApp Preview) -->
+    <meta property="og:title" content="NoteNest — Student Resource Platform" />
+    <meta
+      property="og:description"
+      content="AKTU Courses Hub, Study Materials, and CGPA Calculator — all in one clean student platform."
+    />
+    <meta property="og:url" content="https://notenest-rho.vercel.app/" />
+    <meta property="og:type" content="website" />
+
+    <!-- ⭐ ADD THIS IF YOU PUT preview.png IN PUBLIC FOLDER -->
+    <meta
+      property="og:image"
+      content="https://notenest-rho.vercel.app/preview.png"
+    />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
