Admin mail change

--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
       property="og:image"
       content="https://notenest-rho.vercel.app/preview.png"
     />
+
+    <!-- ⭐ PRO SEO Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "NoteNest",
+  "url": "https://notenest-rho.vercel.app/",
+  "creator": {
+    "@type": "Person",
+    "name": "Riddhi Jaiswal"
+  }
+}
+</script>
+
   </head>
 
   <body>
